# groff-CJK-font

./: .gitignore  ANNOUNCE  BUG-REPORT  ChangeLog  ChangeLog.111  ChangeLog.112  ChangeLog.113  ChangeLog.114  ChangeLog.115  ChangeLog.116  ChangeLog.117  ChangeLog.118  ChangeLog.119  ChangeLog.120  ChangeLog.121  ChangeLog.122  ChangeLog.123  ChangeLog.old  FOR-RELEASE  HACKING  INSTALL.REPO  INSTALL.extra  LICENSES  MANIFEST  MORE.STUFF  Makefile.am  Makefile.in  NEWS  PROBLEMS  PROJECTS  README  README.MinGW  README.md  TODO  acinclude.m4  aclocal.m4  bootstrap  bootstrap.conf  configure  configure.ac  (+5 more)
arch/djgpp/: README  config.bat  config.sed  config.site  t-groff.bat
arch/mingw/: grap2graph.cmd  mingw.am
arch/misc/: misc.am  shdeps.sh
contrib/chem/: .gitignore  ChangeLog  README.txt  chem.1.man  chem.am  chem.pl
contrib/eqn2graph/: .gitignore  eqn2graph.1.man  eqn2graph.am  eqn2graph.sh
contrib/gdiffmk/: .gitignore  ChangeLog  README  gdiffmk.1.man  gdiffmk.am  gdiffmk.sh
contrib/glilypond/: .gitignore  ChangeLog  ChangeLog.0x  README.txt  args.pl  glilypond.1.man  glilypond.am  glilypond.pl  oop_fh.pl  subs.pl
contrib/gperl/: .gitignore  ChangeLog  gperl.1.man  gperl.am  gperl.pl
contrib/gpinyin/: .gitignore  ChangeLog  gpinyin.1.man  gpinyin.am  gpinyin.pl  subs.pl
contrib/grap2graph/: .gitignore  grap2graph.1.man  grap2graph.am  grap2graph.sh
contrib/groff_filenames/: ChangeLog  groff_filenames.5.man  groff_filenames.am
contrib/groffer/: ChangeLog  README  README_PERL  groffer.1.man  groffer.am  groffer.pl  roff2.1.man
contrib/hdtbl/: .gitignore  ChangeLog  groff_hdtbl.7.man  hdmisc.tmac-u  hdtbl.am  hdtbl.tmac-u
contrib/mm/: .gitignore  ChangeLog  Makefile.sim  NOTES  README  groff_mm.7.man  groff_mmse.7.man  m.tmac  mm.am  mmroff.1.man  mmroff.pl  mse.tmac  refer-mm.tmac
contrib/mom/: .gitignore  BUGS  ChangeLog  NEWS  TODO  copyright  groff_mom.7.man  mom.am  om.tmac
contrib/pdfmark/: .gitignore  ChangeLog  PROBLEMS  README  TODO  cover.ms  pdfmark.am  pdfmark.ms  pdfroff.1.man  pdfroff.sh  sanitize.tmac  spdf.tmac
contrib/pic2graph/: .gitignore  pic2graph.1.man  pic2graph.am  pic2graph.sh
contrib/rfc1345/: .gitignore  COPYRIGHT  ChangeLog  groff_rfc1345.7.man  rfc1345.am  rfc1345.tmac
contrib/sboxes/: .gitignore  ChangeLog  msboxes.ms.in  notquine.sed  sboxes.am  sboxes.tmac
doc/: .gitignore  automake.mom  doc.am  fdl.texi  groff.texi  me-revisions  meintro.me  meintro.me.in  meintro_fr.me  meintro_fr.me.in  meref.me  meref.me.in  ms.ms  pic.ms  webpage.ms
font/devX100/: CB  CBI  CI  CR  HB  HBI  HI  HR  NB  NBI  NI  NR  TB  TBI  TI  TR  devX100.am
font/devX100-12/: CB  CBI  CI  CR  HB  HBI  HI  HR  NB  NBI  NI  NR  TB  TBI  TI  TR  devX100-12.am
font/devX75/: CB  CBI  CI  CR  HB  HBI  HI  HR  NB  NBI  NI  NR  TB  TBI  TI  TR  devX75.am
font/devX75-12/: CB  CBI  CI  CR  HB  HBI  HI  HR  NB  NBI  NI  NR  TB  TBI  TI  TR  devX75-12.am
font/devascii/: R.proto  devascii.am
font/devcp1047/: devcp1047.am
font/devdvi/: .gitignore  CSH  CSS  CTH  CTS  JPG  JPM  KOG  KOM  devdvi.am
font/devhtml/: .gitignore  CSH  CTH  JPG  KOG  R.proto  devhtml.am
font/devlatin1/: .gitignore  R.proto  devlatin1.am
font/devlbp/: devlbp.am
font/devlj4/: S  devlj4.am
font/devpdf/: .gitignore  Foundry.in  devpdf.am
font/devps/: .gitignore  CSH  CSS  CTH  CTS  JPG  JPM  KOG  KOM  devps.am  prologue.ps  psstrip.sed
font/devutf8/: .gitignore  CSH  CSS  CTH  CTS  JPG  JPM  KOG  KOM  NOTES  R.proto  devutf8.am
font/scripts/: scripts.am
font/util/: make-Rproto
gnulib_m4/: gnulib-cache.m4  gnulib-comp.m4
lib/: gnulib.mk
m4/: codeset.m4  fcntl-o.m4  glibc21.m4  groff.m4  iconv.m4  lib-ld.m4  lib-link.m4  lib-prefix.m4  localcharset.m4
man/: .gitignore  ditroff.7.man  groff.7.man  groff_char.7.man  groff_diff.7.man  groff_font.5.man  groff_out.5.man  groff_tmac.5.man  man.am  roff.7.man
src/include/: .gitignore  DviChar.h  assert.h  cmap.h  color.h  config.hin  cset.h  curtime.h  device.h  driver.h  errarg.h  error.h  font.h  geometry.h  getopt.h  getopt_int.h  gettext.h  html-strings.h  htmlhint.h  include.am  index.h  itable.h  lf.h  lib.h  localcharset.h  macropath.h  nonposix.h  paper.h  posix.h  printer.h  ptable.h  refid.h  relocate.h  search.h  searchpath.h  stringclass.h  symbol.h  unicode.h
tests/: Makefile  ame.1  ame.ps  dankeCJK.1  dankeCJK.ps  dankeCJK1.1  dankeCJK2.1  dankeJK0.1  dankeJK0.ps  dankeJK1.1  dankeJK1.ps  humanCJK0.1  humanCJK0.ps  kingdom0.1  kingdom0.ps  leftKO.1  leftKO.ps  lucky.1  lucky.ps  memo.md  ningen0.1  ningen0.ps  ningen1.1  ningen1.ps  ningen2.1  ningen2.ps  ningen3.1  ningen3.ps  ningen4.1  ningen4.ps  vita0.1  vita0.ps  vita1.1  vita1.ps  vita2.1  vita2.ps  vita3.1  vita3.ps  width0.1  width0.ps  (+1 more)
tests/grodvi/: Makefile  ame.dvi  ame.ps  cjk-tt-pdf.map  dankeCJK.dvi  dankeCJK.ps  dankeJK0.dvi  dankeJK0.ps  dankeJK1.dvi  dankeJK1.ps  haranoaji-pdf.map  humanCJK0.dvi  humanCJK0.ps  kingdom0.dvi  kingdom0.ps  leftKO.dvi  leftKO.ps  lucky.dvi  lucky.ps  ningen0.dvi  ningen0.ps  ningen1.dvi  ningen1.ps  ningen2.dvi  ningen2.ps  ningen3.ps  ningen4.dvi  ningen4.ps  ryumin-ps.map  vita0.dvi  vita0.ps  vita1.dvi  vita1.ps  vita2.dvi  vita2.ps  vita3.ps  width1.dvi  width1.ps
tests/grohtml/: Makefile  ame.html  dankeCJK.grout  dankeCJK.html  dankeCJK1.html  dankeCJK1_ascii.html  dankeCJK1_partial.html  dankeCJK2.html  dankeCJK_ascii.html  dankeCJK_partial.html  dankeJK0.grout  dankeJK0.html  dankeJK1.grout  dankeJK1.html  humanCJK0.html  kingdom0.html  leftKO.html  lucky.html  ningen0.html  (+8 more)
tmac/: .gitignore  62bit.tmac  LOCALIZATION  TESTING-HINTS  TODO  X.tmac  Xps.tmac  a4.tmac  an-ext.tmac  an-old.tmac  an.tmac  andoc.tmac  cp1047.tmac  cs.tmac  de.tmac  den.tmac  devtag.tmac  doc-common-u  doc-ditroff-u  doc-nroff-u  doc-old.tmac  doc-syms-u  doc.tmac  doc.tmac-u  dvi.tmac  e.tmac  e.tmac-u  ec.tmac  en.tmac  es.tmac  fallbacks.tmac  fr.tmac  groff_man.7.man  groff_man.7.man.in  groff_man_style.7.man  groff_mdoc.7.man  groff_me.7.man  groff_ms.7.man  groff_trace.7.man  groff_www.7.man  (+45 more)
(+597 files in other folders)
